--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -30,7 +30,7 @@
         <item name="android:colorAccent">@color/primary</item>
     </style>
 
-    <style name="AppThemDatePicker" parent="android:Theme.Material.Light">
+    <style name="AppThemDatePicker" parent="android:Theme.Material.Light.Dialog">
         <item name="android:textColorPrimary">@color/text_primary</item>
         <item name="android:colorAccent">@color/primary</item>
     </style>
